---------------------------------------------------------------------------------------------------
Version: 3.0.9
Date: ?
  Changes:
    - Removed unused scrude-to-methane recipe from factoriopedia.
    - Added an unlock for the unused steam+naptha -> hydrogen recipe.
---------------------------------------------------------------------------------------------------
Version: 3.0.8
Date: 2024-11-18
  Changes:
    - Fixed that the game would crash if you set your language to Russian.
---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: 2024-11-17
  Changes:
    - Fixed bitumen extractors invisible in 2.0. Resolves https://github.com/pyanodon/pybugreports/issues/714
    - Fixed natural gas derrick/etc can input drilling fluid into wrong port. Resolves https://github.com/pyanodon/pybugreports/issues/718
    - Fixed "floating" pipe connection graphics for unruptured bitumen extractors.
    - Bitumen extractors can now be connected to the circuit network even before it is ruptured.
    - Re-organized fluid inputs for bitumen extractors.
    - Sulfur mines no longer requires gas canisters can consume fuel directly.
    - Greatly increased the fuel consumption of the sulfur mine from 500kW to 30MW.
    - Increased the number of module slots in the sulfur mine 1 -> 3.
    - Added light flicker effects to the sulfur mine.
    - Diluted the effects of green modules on the sulfur mine by a factor of 9x.
    - The oil explosion from ruptured oil derricks now lightly damages nearby buildings.
    - Added a chat message notification for ruptured bitumen seeps.
    - The health of bitumen seep extractors now scales with MK level.
---------------------------------------------------------------------------------------------------
Version: 3.0.6
Date: 2024-11-14
  Changes:
    - Buffed the rubber -> belt recipe. Rubber -> belt ratio is flipped from 2:1 to 1:2. Allowed productivity.