@@ -4,6 +4,7 @@ Date: ?
   Changes:
     - Removed unused scrude-to-methane recipe from factoriopedia.
     - Added an unlock for the unused steam+naptha -> hydrogen recipe.
+    - Added an unlock for unused vanadium pentoxide recipes.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.8
 Date: 2024-11-18
